<resources>
    <string name="app_name">PMS VVDN</string>
    <string name="date_range_format">%1$s - %2$s</string>
    <string name="reason_format">Reason: %1$s</string>
    <string name="days_count_format">%1$d Days</string>
    <string name="date_label_format">Date: %1$s</string>
    <string name="not_available">N/A</string>
    <string name="not_checked_in">Not checked in</string>
    <string name="not_checked_out">Not checked out</string>
    <string name="login_title">Welcome Back</string>
    <string name="login_subtitle">Sign in to continue</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="btn_login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logging_in">Logging in...</string>
    <string name="error_empty_fields">Please enter email and password</string>
    <string name="login_success">Login successful!</string>
    <string name="partial_login">Partial login: %1$s</string>
    <string name="employee_name_format">Employee: %1$s</string>
    <string name="employee_id_format">Employee ID: %1$s</string>
    <string name="payslip_title_format">%1$s %2$d Payslip</string>
    <string name="currency_format">₹ %1$.2f</string>
    <string name="hi_name_format">Hi, %1$s</string>
    <string name="logout">Logout</string>
    <string name="leave_balance_format">%1$d / %2$d Days</string>
    <string name="payslip_found_format">Payslip found for %1$s %2$d</string>
    <string name="download_failed_format">Download failed: %1$s</string>
    <string name="error_saving_pdf_format">Error saving PDF: %1$s</string>
    <string name="open_payslip">Open Payslip</string>
    <string name="select_month">Select Month</string>
    <string name="select_year">Select Year</string>
    <string name="select_leave_type">Select Leave Type</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="select_date">Select Date</string>
    <string name="select_date_range">Select Date Range</string>
</resources>